-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8
-
None
-
9dda5d555 (dev), 4d5772846 (6.8), d73c0802b (6.7), caf4453d6 (tqtc/lts-6.5)
When running on platforms that set a palette that respects the colour scheme of the OS, the Basic style's ComboBox popup background is the wrong colour. The Basic style doesn't currently have support for light or dark themes, nor should it respect the native colour scheme, as it's meant to look the same on all platforms.
This regression was introduced with https://codereview.qt-project.org/c/qt/qtdeclarative/+/559563/6/src/quickcontrols/basic/ComboBox.qml. Before that, https://codereview.qt-project.org/c/qt/qtquickcontrols2/+/248924 addressed a similar issue where the ComboBox's popup background wasn't affected.