tests/auto/quickcontrols/palette/data/comboBoxPopupWithThemeDefault.qml
@@ -1,0 +1,17 @@
+// Copyright (C) 2024 The Qt Company Ltd.
+// SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only
+
+import QtQuick
+import QtQuick.Controls
+
+ApplicationWindow {
+    width: 400
+    height: 400
+
+    property alias comboBox: comboBox
+
+    ComboBox {
+        id: comboBox
+        model: 1
+    }
+}
