tests/auto/quickcontrols/palette/tst_palette.cpp
@@ -58,6 +58,8 @@ private slots:
 
     void comboBoxPopup_data();
     void comboBoxPopup();
+    void comboBoxPopupWithThemeDefault_data();
+    void comboBoxPopupWithThemeDefault();
 };
 
 tst_palette::tst_palette()
@@ -610,6 +612,37 @@ void tst_palette::comboBoxPopup()
     QCOMPARE(comboBoxInPopupBackground->property("color"), QColorConstants::Red);
     QCOMPARE(comboBoxInPopupBackground->property("palette").value<QQuickPalette*>()->toQPalette().window().color(),
         QColorConstants::Red);
+}
+
+void tst_palette::comboBoxPopupWithThemeDefault_data()
+{
+    QTest::addColumn<QString>("style");
+    QTest::addColumn<QColor>("expectedComboBoxPopupBackgroundColor");
+
+    QTest::newRow("Basic") << "Basic" << QColor::fromRgb(0xFFFFFF);
+
+    // We can't test Fusion because it uses the default application palette,
+    // which is the default-constructed QPalette, so the test would always pass.
+}
+
+void tst_palette::comboBoxPopupWithThemeDefault()
+{
+    QFETCH(QString, style);
+    QFETCH(QColor, expectedComboBoxPopupBackgroundColor);
+
+    qmlClearTypeRegistrations();
+    QQuickStyle::setStyle(style);
+
+    QQuickApplicationHelper helper(this, "comboBoxPopupWithThemeDefault.qml");
+    QVERIFY2(helper.ready, helper.failureMessage());
+    QQuickWindow *window = helper.window;
+    window->show();
+    QVERIFY(QTest::qWaitForWindowExposed(window));
+
+    const auto *comboBox = window->property("comboBox").value<QQuickComboBox *>();
+    QVERIFY(comboBox);
+    const auto *comboBoxBackground = comboBox->popup()->background();
+    QCOMPARE(comboBoxBackground->property("color"), expectedComboBoxPopupBackgroundColor);
 }
 
 QTEST_MAIN(tst_palette)
